# hamster-kombat-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: settings.py
src/managers/: __init__.py  session_manager.py
src/tapper/: __init__.py  tapper.py
